# stdx

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  examples.md
examples/: bitflags.rs  byteorder.rs  chrono.rs  clap.rs  encoding_rs.rs  error-chain.rs  fnv.rs  itertools.rs  json.rs  lazy_static.rs  libc.rs  log.rs  memmap.rs  ndarray.rs  num.rs  num_cpus.rs  rand.rs  rayon.rs  regex.rs  reqwest.rs  semver.rs  serde.rs  serde_json.rs  tar.rs  tempdir.rs  threadpool.rs  toml.rs  url.rs  walkdir.rs
src/: lib.rs
tests/: skeptic.rs  smoke.rs
