[package]
name = "stdx"
version = "0.118.0-rc"
authors = ["Brian Anderson <banderson@mozilla.com>"]
description = "The missing batteries of Rust"
license = "MIT/Apache-2.0"

[dependencies]

# If you update these also update all the versions in README.md
# Note: crates are presented in alphabetical order.

bitflags = "0.9.1"
byteorder = "1.0.0"
chrono = { version = "0.3.1", features = ["serde"] }
clap = "2.24.2"
error-chain = "0.10.0"
lazy_static = "0.2.8"
libc = "0.2.23"
log = "0.3.8"
# FIXME bluss/rust-ndarray#314 serde
ndarray = "0.9.1"
num = "0.1.37"
rand = "0.3.15"
rayon = "0.7.1"
regex = "0.2.2"
reqwest = { version = "0.6.2", features = ["serde"] }
serde = "1.0.8"
serde_json = "1.0.2"
tempdir = "0.3.5"
toml = "0.4.1"
url = "1.4.1"

# Supplemental dependencies
env_logger = "0.4.3"
serde_derive = "1.0.8"
