[package]
name = "stdx"
version = "0.132.0-rc"
authors = ["Brian Anderson <banderson@mozilla.com>"]
description = "The missing batteries of Rust"
license = "MIT/Apache-2.0"

[dependencies]

# If you update these also update all the versions in README.md
# Note: crates are presented in alphabetical order.

bitflags = "0.9.1"
byteorder = "1.1.0"
chrono = { version = "0.4.0", features = ["serde"] }
clap = "2.25.0"
encoding_rs = "0.6.11"
error-chain = "0.10.0"
flate2 = "0.2.19"
fnv = "1.0.5"
itertools = "0.6.0"
lazy_static = "0.2.8"
libc = "0.2.26"
log = "0.3.8"
memmap = "0.5.2"
# FIXME bluss/rust-ndarray#314 serde
ndarray = "0.9.1"
num = "0.1.40"
num_cpus = "1.6.2"
rand = "0.3.15"
rayon = "0.8.2"
regex = "0.2.2"
reqwest = { version = "0.7.1" }
semver = { version = "0.7.0", features = ["serde"] }
serde = "1.0.10"
serde_json = "1.0.2"
tar = "0.4.13"
tempdir = "0.3.5"
threadpool = "1.4.0"
toml = "0.4.5"
url = "1.5.1"
walkdir = "1.0.7"

# Supplemental dependencies
env_logger = "0.4.3"
serde_derive = "1.0.10"

[build-dependencies]
skeptic = { version = "0.13.4", path = "../rust-skeptic/src/skeptic" }
